# kizuna-multimodal-privacy-engine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.edge  KIZUNA_ARCHITECTURE.md  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  dvc.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_native.py
.github/workflows/: ci.yml
.kiro/specs/epic6-differential-privacy/: requirements.md
.kiro/specs/epic7-memory-safety/: .config.kiro  requirements.md
app/: dashboard.py  demo.py
app/pages/: 1_live_monitor.py  2_anomaly_history.py  3_vector_explorer.py  4_system_health.py  5_settings.py
config/: default.yaml  development.yaml  edge.yaml
data/: README.md  central_meta.json
docs/: model_selection.md
huggingface/: README.md  app.py  requirements.txt
models/fusion/: projection_1024.onnx.data  projection_512.onnx.data
models/sensor/: model.onnx.data
scripts/: benchmark_accuracy.py  benchmark_cross_domain.py  benchmark_latency.py  benchmark_memory.py  benchmark_throughput.py  build_native.py  build_native_extension.py  export_audio_onnx.py  export_vision_onnx.py  generate_demo_gif.py  prepare_datasets.py  quantize_models.py  retrain_pipeline.py
src/: central_node.py  config.py  edge_node.py  logger.py
src/anomaly/: classifier.py  cluster_detector.py  cross_domain.py  density_detector.py  detector.py  enrollment.py  knn_detector.py  models.py  scenarios.py
src/dashboard/: api.py  live_state.py  projection.py
src/database/: base.py  faiss_store.py  metadata.py  qdrant_client.py
src/engine/: __init__.py  audio_encoder.py  vision_encoder.py
src/ingestion/: __init__.py  assembler.py  audio_simulator.py  env_simulator.py  models.py  temporal_align.py  video_simulator.py
src/privacy/: __init__.py  budget.py  calibration.py  dp_noise.py  lifecycle.py  memory_wiper.py  memory_wiper_native.py
src/privacy/native/: CMakeLists.txt  wiper.cpp
tests/: test_anomaly.py  test_audio_encoder.py  test_budget.py  test_calibration.py  test_cross_domain.py  test_dashboard_api.py  test_database.py  test_dp_noise.py  test_e2e_pipeline.py  test_fault_injection.py  test_japan_scenarios.py  test_lifecycle.py  test_memory_wiper.py  test_privacy_budget.py  test_privacy_dp.py  test_properties.py  test_simulation.py
tests/unit/: test_config.py  test_ingestion.py  test_vision_encoder.py
